@@ -12,6 +12,8 @@ Note to packagers:
 
 Improvements:
 
+ - Add a new "auto" value for the 'vertical-split' option to let Tig choose the
+   split orientation (this is the new default behavior).
  - Add 'stage-split-chunk' action for splitting chunks in the stage view.
    Bound to '\' by default. (GH #107)
  - Add 'back' action bound to '<' by default, which will return the blame view
